[gd_scene load_steps=6 format=3 uid="uid://dgh8xrv7w81qm"]

[ext_resource type="Script" uid="uid://cc0djh8gi6afg" path="res://characters/ui/EquipmentContainer.gd" id="1"]
[ext_resource type="Theme" uid="uid://cxldawy7hnlku" path="res://default_theme.tres" id="1_itwtj"]
[ext_resource type="Texture2D" uid="uid://iu4ufbdgqcpe" path="res://assets/icons/background_48.png" id="2_vdviw"]
[ext_resource type="Texture2D" uid="uid://dgh5ed8lxkqlb" path="res://assets/icons/border_48.png" id="3_itwtj"]
[ext_resource type="PackedScene" uid="uid://dwt2awegps8rb" path="res://items/ui/ItemIcon.tscn" id="4_vdviw"]

[node name="EquipmentContainer" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1104.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 7
theme = ExtResource("1_itwtj")
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.431373, 0.431373, 0.431373, 1)
layout_mode = 2
texture = ExtResource("2_vdviw")

[node name="Border" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(0.74, 0.74, 0.74, 1)
layout_mode = 2
texture = ExtResource("3_itwtj")

[node name="ItemIcon" parent="." instance=ExtResource("4_vdviw")]
unique_name_in_owner = true
visible = false
layout_mode = 2
drag_enabled = false
select_enabled = false

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.34, 0.34, 0.34, 1)
theme_override_constants/outline_size = 4
text = "L2"

[connection signal="gui_input" from="." to="." method="on_gui_input"]
